styles/all/theme/boardannouncements.css
/* style the announcement banner */
#phpbb_announcement {
	margin: 10px 0;
	font-size: 1.1em;
	padding: 16px 12px;
	border-radius: 7px;
	background-color: #ECD5D8; /* default color */
}

/* set to relative so absolute can be used for .close */
#phpbb_announcement .inner {
	position: relative;
}

/* zero out any text margins and scroll any overflow */
#phpbb_announcement .inner p {
	margin: 0;
	overflow-x: auto;
}

/* style the close button */
#phpbb_announcement .close {
	position: absolute;
	right: -6px;
	top: -10px;
	width: 12px;
	height: 12px;
	background: transparent url("images/close.png") no-repeat 0 0;
	opacity: 0.6;
}

.notouch #phpbb_announcement .close {
	opacity: 0;
	transition: opacity .5s;
}

/* display the close button on mouse-over of the banner */
.notouch #phpbb_announcement:hover .close {
	opacity: 0.6;
}

